<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quiztion_project3.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/knowledge" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="#4CAF50" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/orange" />

            <TextView
                android:id="@+id/question_1"
                style="@style/QuestionStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/question_1" />

            <RadioGroup
                android:id="@+id/answers_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answer_1a"
                    style="@style/AnswerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1_a" />

                <RadioButton
                    android:id="@+id/answer_1b"
                    style="@style/AnswerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1_b" />

                <RadioButton
                    android:id="@+id/answer_1c"
                    style="@style/AnswerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1_c" />

                <RadioButton
                    android:id="@+id/answer_1d"
                    style="@style/AnswerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1_d" />

            </RadioGroup>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="#4CAF50" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/lamp" />

            <TextView
                android:id="@+id/question_2"
                style="@style/QuestionStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/question_2" />

            <RadioGroup
                android:id="@+id/answers_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answer_2a"
                    style="@style/AnswerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2_a" />

                <RadioButton
                    android:id="@+id/answer_2b"
                    style="@style/AnswerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2_b" />

                <RadioButton
                    android:id="@+id/answer_2c"
                    style="@style/AnswerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2_c" />

                <RadioButton
                    android:id="@+id/answer_2d"
                    style="@style/AnswerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2_d" />

            </RadioGroup>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="#4CAF50" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/cookies" />

            <TextView
                android:id="@+id/question_3"
                style="@style/QuestionStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/question_3" />

            <EditText
                android:id="@+id/answer_3"
                style="@style/AnswerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer_3_hint"
                android:inputType="number"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="#4CAF50" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/reptiles" />

            <TextView
                android:id="@+id/question_4"
                style="@style/QuestionStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/question_4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/answer_4a"
                    style="@style/AnswerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/answer_4_a" />

                <CheckBox
                    android:id="@+id/answer_4c"
                    style="@style/AnswerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/answer_4_c" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/answer_4b"
                    style="@style/AnswerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/answer_4_b" />

                <CheckBox
                    android:id="@+id/answer_4d"
                    style="@style/AnswerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/answer_4_d" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="#4CAF50" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/days" />

            <TextView
                android:id="@+id/question_5"
                style="@style/QuestionStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/question_5" />

            <EditText
                android:id="@+id/answer_5"
                style="@style/AnswerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer_5_hint"
                android:inputType="textCapWords"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="#4CAF50" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="checkQuizAnswers"
                    android:paddingBottom="4dp"
                    android:text="@string/score"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="clearQuiz"
                    android:text="@string/reset"
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>